Fix 60+ audit bugs, EcoQoS correctness, admin restart, updates UI; v1.0.2
Critical/high fixes:
- EcoService EcoQoS struct size 8->12 (SetProcessInformation never applied)
- Central shutdownServices() un-throttles everything on exit
- PowerPlanService.run() always returned -1 (setDaemon after start) which
  created a duplicate Power Saver scheme on every toggle; activation now
  verified via getActivePlanGuid comparison
- Health % double-counted capacity-history table (regex anchored to cells)
- Auto-saver inverted/duplicated AC-transition condition fixed; battery-state
  baseline required before firing
- Idle detection 32-bit tick wrap (49.7-day permanent dim)
- Power Saver toggle moved off FX thread (2-6s freeze)
- Version single-sourced (AppConstants 1.0.2)

EcoQoS correctness (live-verified on battery):
- Foreground process TREE exempt (ProcessTree, <=8 parent hops)
- Visible non-minimized windows never throttled (VisibleWindows/EnumWindows);
  system-wide throttled dropped 240+ -> 72
- Shell/system + console hosts + java launchers whitelisted
- EcoQosRunning property mirrors real engine state; manual toggle authoritative
- Restart as Administrator (Shell32Ext runas + ElevationUtil) for full coverage
- Measured: throttled background CPU throughput -14%

Features:
- Updates & Appearance: Check-now button, version label, repo field always
  editable; startup check toasts (modal only when visible)
- Low/critical battery toasts with hysteresis
- Settings apply live (hotkey re-register, idle-dim update)
- About: developer profile + issue links
- Window position persisted + screen-clamped

Perf/cleanup:
- JNA PowerGetActiveScheme (no powercfg spawns in 5s poll), /list cached
- History CSV 15s parse cache, single read per tick
- Tray updates coalesced; EDT-confined AWT access
- Dead code removed (Kernel32Throttle, TrayMenu, PowerPlan model, legacy APIs)
- .gitignore was UTF-16 (nothing was ignored; .gradle/ untracked)
- JavaFX 17.0.6 -> 21.0.2, javafx.fxml module droppe